--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -30,50 +30,13 @@
 </head>
 
 <body id="page-top" class="index">
-
-  <!-- Navigation -->
-  <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-        </button>
-        <a class="navbar-brand page-scroll" href="#page-top">intranerds</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="hidden">
-            <a href="#page-top"></a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#about">About</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#servicios">Servicios</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#portafolio">Portafolio</a>
-          </li>
-          <!-- <li>
-            <a class="page-scroll" href="#about">About</a>
-          </li> -->
-          <li>
-            <a class="page-scroll" href="#equipo">Equipo</a>
-          </li>
-          <li>
-            <a class="page-scroll" href="#contacto">Contacto</a>
-          </li>
-        </ul>
-      </div>
-      <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-  </nav>
+  {% include 'nav.html' %}
 
   {% block content %}{% endblock %}
+
+  {% include 'footer.html' %}
+
+  {% block modals %}{% endblock %}
 
   <!-- jQuery -->
   <script src="vendor/jquery/jquery.min.js"></script>
