--- a/web/includes/home/portafolio/osmapp.html
+++ b/web/includes/home/portafolio/osmapp.html
@@ -5,7 +5,7 @@
 {% block desc %}Museo Pedro de Osma{% endblock %}
 
 {% block thumb %}roundicons.png{% endblock %}
-{% block image %}roundicons-free.png{% endblock %} <!-- relativo a img/portfolio -->
+{% block image %}roundicons-free.png{% endblock %} <!-- relativo a img/portafolio -->
 
 
 {% block body %}
