--- a/web/includes/home/portafolio/wikipiedra.html
+++ b/web/includes/home/portafolio/wikipiedra.html
@@ -5,7 +5,7 @@
 {% block desc %}Escuelab{% endblock %}
 
 {% block thumb %}startup-framework.png{% endblock %}
-{% block image %}startup-framework-preview.png{% endblock %} <!-- relativo a img/portfolio -->
+{% block image %}startup-framework-preview.png{% endblock %} <!-- relativo a img/portafolio -->
 
 {% block body %}
 <p><a href="http://designmodo.com/startup/?u=787">Startup Framework</a> is a website builder for professionals. Startup Framework contains components and complex blocks (PSD+HTML Bootstrap themes and templates) which can easily
