--- a/web/templates/home/modal.html
+++ b/web/templates/home/modal.html
@@ -13,7 +13,7 @@
             <div class="modal-body">
               <h2>{% block title %}{% endblock %}</h2>
               <p class="item-intro text-muted">{% block desc %}{% endblock %}</p>
-              <img class="img-responsive img-centered" src="img/portfolio/{% block image %}{% endblock %}" alt="">
+              <img class="img-responsive img-centered" src="img/portafolio/{% block image %}{% endblock %}" alt="">
               {% block body %}{% endblock %}
               <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Cerrar</button>
             </div>
