--- a/web/templates/home/portafolio/card.html
+++ b/web/templates/home/portafolio/card.html
@@ -5,7 +5,7 @@
         <i class="fa fa-plus fa-3x"></i>
       </div>
     </div>
-    <img src="img/portfolio/{%block thumb %}{% endblock %}" class="img-responsive" alt="">
+    <img src="img/portafolio/{%block thumb %}{% endblock %}" class="img-responsive" alt="">
   </a>
   <div class="portfolio-caption">
     <h4>{%block title %}{% endblock %}</h4>
