--- a/web/includes/contacto.html
+++ b/web/includes/contacto.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contacto</h2>
+        <h2 class="section-heading">Contacto <span class="blink-fast">∎</span></h2>
         <h3 class="section-subheading text-muted">&nbsp;</h3>
       </div>
     </div>
