--- a/web/includes/home/portafolio/hablemosquechua.html
+++ b/web/includes/home/portafolio/hablemosquechua.html
@@ -5,7 +5,7 @@
 {% block desc %}@hablemosquechua{% endblock %}
 
 {% block thumb %}treehouse.png{% endblock %}
-{% block image %}treehouse-preview.png{% endblock %} <!-- relativo a img/portfolio -->
+{% block image %}treehouse-preview.png{% endblock %} <!-- relativo a img/portafolio -->
 
 {% block body %}
 <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or
