foto mariano y texto intro

--- a/web/includes/home/about.html
+++ b/web/includes/home/about.html
@@ -1,10 +1,25 @@
 <section id="about" class="quote">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">
-          <i>Por que existe intranerds</i>
-        </h2>
+    <div class="row text-center">
+      <div class="col-md-8 col-md-offset-3 about">
+        <p class="intro-heading"><b>Lugar:</b> Perú</p>
+        <p class="intro-heading"><b>Año:</b> 2016</p>
+        <p>A diez años de la llegada de la <b>web 2.0</b></p>
+        <p>
+          <ul>
+            <li><b>Millones</b> de niños con laptops vacías y <b>sin internet</b>.</li>
+            <li>
+              <b>Cientos</b> de municipios, comisarías y postas médicas
+              están <b>fuera de <i>La Nube</i></b>.
+            </li>
+            <li><b>Miles</b> de turistas <b>buscan</b> torpemente la <b>conectividad</b>.</li>
+          </ul>
+        </p>
+        <p>Es para todos ellos que creamos soluciones</p>
+        <p>Somos <b>intranerds</b></p>
+        <h3 class="roca">
+          Soluciones offline sólidas como la roca<span class="blink-fast">∎</span>
+        </h3>
         <!-- <h3 class="section-subheading text-muted">Soluciones offline sólidas como la roca</h3> -->
       </div>
     </div>
