--- a/web/includes/home/servicios.html
+++ b/web/includes/home/servicios.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Productos y servicios</h2>
-        <h3 class="section-subheading text-muted">Soluciones offline sólidas como la roca</h3>
+        <!-- <h3 class="section-subheading text-muted">Intranerd basic toolkit</h3> -->
       </div>
     </div>
     <div class="row text-center">
