--- a/web/includes/home/servicios/enciclopiedra.html
+++ b/web/includes/home/servicios/enciclopiedra.html
@@ -3,11 +3,16 @@
 {% block id %}enciclopiedraModal{% endblock %}
 {% block title %}Enciclopiedra{% endblock %}
 {% block teaser %}
-  Un sevidor offline configurado según tus necesidades,
-  que sirve contenidos vía WiFi local. En escuelas,
-  ventanillas de atención, plazas, museos y sitios
-  arquelógicos: Tus usuarios navegan páginas web sin
-  depender de una conexión.
+  <p>
+    Un <b>sevidor offline</b> configurado según tus necesidades,
+    que sirve contenidos vía WiFi local.
+  </p>
+  <p>
+    En escuelas,
+    ventanillas de atención, plazas, museos y sitios
+    arquelógicos: <b>Tus usuarios navegan páginas web sin
+    depender de una conexión</b>.
+  </p>
 {% endblock %}
 {% block desc %}Lorem ipsum dolor sit amet consectetur.{% endblock %}
 {% block icon %}bullseye{% endblock %}
