--- a/web/includes/home/servicios/envoltura.html
+++ b/web/includes/home/servicios/envoltura.html
@@ -3,11 +3,16 @@
 {% block id %}envolturaModal{% endblock %}
 {% block title %}Envoltura{% endblock %}
 {% block teaser %}
-  Empaquetamos tus contenidos dentro de una app offline:
-  <b>Audioguías, revistas, fotos, videos, libros, mapas,
-  fotos360</b> y más. Así tus contenidos acompañan a tus
-  lectores más allá de la conectividad. De viaje, con mala
-  señal, sin plan de datos o en modo avión.
+  <p>
+    <b>Empaquetamos</b> tus contenidos dentro de una <b>app offline</b>:
+    <i>Audioguías, revistas, fotos, videos, libros, mapas,
+      fotos360</i>...
+  </p>
+  <p>
+    Así <b>tus contenidos acompañan a tus
+    lectores</b> más allá de la conectividad. <b>De viaje, con mala
+    señal, sin plan de datos o en modo avión.</b>
+  </p>
 {% endblock %}
 {% block desc %}Lorem ipsum dolor sit amet consectetur.{% endblock %}
 {% block icon %}archive{% endblock %}
