--- a/web/includes/home/equipo.html
+++ b/web/includes/home/equipo.html
@@ -1,9 +1,9 @@
-<section id="equipo">
+<section id="equipo" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">¿Quiénes somos?</h2>
-        <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        <h3 class="section-subheading text-muted">Los <b>Intranerds</b></h3>
       </div>
     </div>
     <div class="row">
@@ -52,7 +52,11 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+        <p class="large text-muted">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis,
+          totam corporis ea, alias ut unde.
+        </p>
       </div>
     </div>
   </div>
