--- a/web/includes/home/equipo.html
+++ b/web/includes/home/equipo.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">¿Quiénes somos?</h2>
-        <h3 class="section-subheading text-muted">Los <b>Intranerds</b></h3>
+        <h3 class="section-subheading text-muted">Los <b>intranerds</b></h3>
       </div>
     </div>
     <div class="row">
