--- a/web/scss/_mixins.scss
+++ b/web/scss/_mixins.scss
@@ -61,10 +61,35 @@
 }
 
 @mixin body-font {
-  font-family: "Courier New", Courier, monospace;
+  font-family: Monaco, Consolas, "Lucida Console", monospace;
+  //font-family: "Courier New", Courier, monospace;
 }
 
 @mixin heading-font {
   text-rendering: optimizelegibility;
   font-family: DOS,SimHei,Monaco,Menlo,Consolas,'Courier New',monospace;
+}
+
+@mixin terminal {
+  div {
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid $brand-primary; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    animation:
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: $brand-primary; }
 }
