--- a/web/includes/home/equipo.html
+++ b/web/includes/home/equipo.html
@@ -50,7 +50,7 @@
         </div>
       </div> -->
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <p class="large text-muted">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -58,6 +58,6 @@
           totam corporis ea, alias ut unde.
         </p>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
