--- a/web/includes/home/about.html
+++ b/web/includes/home/about.html
@@ -22,7 +22,7 @@ S-P-E-E-D
    ╔══════════════════════════╗
    ║ ╔══════════════════════╗ ║
    ║ ║  Soluciones OFFLINE  ║ ║
-   ║ ║ sólidas como la ROCA ║ ║
+   ║ ║ SÓLIDAS como la ROCA ║ ║
    ║ ╚══════════════════════╝ ║
    ╚══════════════════════════╝
 </div>
