--- a/web/includes/contacto.html
+++ b/web/includes/contacto.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contacto <span class="blink-fast">∎</span></h2>
+        <h2 class="section-heading">Contacto</h2>
         <h3 class="section-subheading text-muted">&nbsp;</h3>
       </div>
     </div>
@@ -14,25 +14,29 @@
           <div class="row inputs">
             <div class="col-md-6">
               <div class="form-group">
+                <!-- <div class="cmd">
+                  <span></span>
+                  <div class="cursor"></div>
+                </div> -->
                 <input type="text" class="form-control"
-                  placeholder="Nombre" id="name" name="name">
+                  placeholder="nombre" id="name" name="name">
                 <!-- <p class="help-block text-danger"></p> -->
               </div>
               <div class="form-group">
                 <input type="email" class="form-control"
-                  placeholder="Email *" id="_replyto" name="_replyto" required>
+                  placeholder="email*" id="_replyto" name="_replyto" required>
                 <!-- <p class="help-block text-danger"></p> -->
               </div>
               <div class="form-group">
                 <input type="text" class="form-control"
-                  placeholder="Asunto" id="_subject" name="_subject">
+                  placeholder="asunto" id="_subject" name="_subject">
                 <!-- <p class="help-block text-danger"></p> -->
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <textarea class="form-control"
-                  placeholder="Mensaje *" id="message" name="message"
+                  placeholder="mensaje*" id="message" name="message"
                   required></textarea>
                 <!-- <p class="help-block text-danger"></p> -->
               </div>
