center qieres saber mas button

--- a/web/templates/home/servicios/card.html
+++ b/web/templates/home/servicios/card.html
@@ -8,7 +8,7 @@
   </a>
   <h3 class="service-heading">{% block title %}{% endblock %}</h3>
   <p class="text-muted">{% block teaser %}{% endblock %}</p>
-  <div class="bottom-btn">
+  <p><div class="bottom-btn">
     <a type="button" class="page-scroll btn btn-primary" href="#contacto">Quieres saber más?</a>
-  </div>
+  </div></p>
 </div>
